/*
 * $Id: ChangeLog,v 1.6092 2008/05/09 18:23:21 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-05-14 00:03 UTC+0100 Ath <Ath1 at sourceforge.net>
  * compile.mak
    * finetune compilation of menuto.prg from contrib/libnf

2008-05-09 13:50 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/errorapi.c
  * source/vm/hvm.c
    * Changed hb_vm_BreakBlock from PHB_ITEM to HB_ITEM

  * source/vm/hvm.c
    * Additional refinments in shutdown sequence of hb_vmQuit()
    + Debug assertion

  * source/vm/garbage.c
    + Added hb_gcItemRef() for hb_vm_BreakBlock
    + Added optional trace protected by #ifdef TRACE_COLLECT and #ifdef TRACE_RELEASE

  * source/vm/memvars.c
    * Safety reset assignments

  * include/classes.h
  * source/vm/classes.c
    + BOOL hb_clsDestructorsAllowed( void )
    * Corrected 2 typos in recently added error detection
    ! GPF trap in hb_clsFinalize()

  * source/vm/fastitem.c
    + Debug assertion

2008-05-08 12:07 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * hbzlib\zip.c
    ! fixed needed initialization of ExcludeFile.
    + Added the capabilities to use relative paths.
    ( coded by Juan Galvez ) seems that now works properly.

2008-05-08 10:50 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * hbzlib\zipnew.cpp
    ! fixed ireturn on error exception.

2008-05-08 06:00 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/pcre/pcre_compile.c
  * source/rtl/pcre/pcre_ord2utf8.c
  * source/rtl/pcre/pcre_valid_utf8.c
    ! kill some BCC warnings

2008-05-08 05:25 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/pcre/pcre_internal.h
    ! missing condition on TRUE definition

2008-05-08 05:00 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/pcre/config.h
  * source/rtl/pcre/config.h.generic
  * source/rtl/pcre/pcre.h